Fixing Build Errors